syntax = "proto3";

package v1;

import "proto/common/v1/code.proto";

option go_package = "github.com/dysodeng/app/api/proto/common/v1";

message MetadataRequest {}

message MetadataResponse {
  v1.Code code = 1;
  string message = 2;
  Metadata metadata = 3;
}

message Metadata {
  string app_name = 1;
  string service_name = 2;
  string version = 3;
  string env = 4;
  repeated string tags = 5;
}

// MetadataService 服务元数据信息服务
service MetadataService {
  // Metadata 获取服务元数据信息
  rpc Metadata(MetadataRequest) returns (MetadataResponse);
}
